<resources>
    <string name="app_name">MyApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="password">Password</string>
    <string name="not_a_member_yet_signup_now">Not a Member Yet?Signup Now</string>
    <string name="Alerady_a_member_Signin_now">Already a member Login Now</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="email">email</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm password</string>
    <string name="signup">Signup</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>
